--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body class="light-gray">
@@ -53,7 +53,7 @@
     <input type="checkbox" class="overlay-toggle" id="side-nav-toggle">
     <div class="overlay">
         <label class="overlay-bg closes-overlay" for="side-nav-toggle"></label>
-        <div class="sidenav">
+        <div class="sidenav right">
             <a href="#" class="nav-item">Home</a>
             <a href="#" class="nav-item">About Us</a>
             <a href="#" class="nav-item">Contact</a>
@@ -62,7 +62,7 @@
 
     <div class="nav-offset"></div>
 
-    <div class="row">
+    <div class="row no-space">
         <div class="col md-6 lg-3 red">
             <div class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus veritatis iure voluptatum asperiores,
@@ -91,27 +91,121 @@
     </div>
 
     <div class="row">
-        <div class="container">
-            <div class="card blue shadow-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio voluptates quaerat, exercitationem quod repudiandae
-                perferendis!
+        <div class="container fluid" style="max-width: 900px;">
+            <div class="panel blue shadow-3">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio voluptates quaerat, exercitationem quod repudiandae
+                    perferendis!
+                </p>
             </div>
-            <div class="card green shadow-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio voluptates quaerat, exercitationem quod repudiandae
-                perferendis!
+            <div class="panel green shadow-3">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quidem cupiditate quasi modi corrupti veritatis harum explicabo
+                    sunt ipsa, iusto id nihil unde animi eligendi commodi minima nemo obcaecati. Quas.
+                </p>
             </div>
-            <a class="button raised blue">some text</a>
-            <a class="button raised blue round">some text</a>
-            <a class="button raised blue fab"><i class="material-icons">add</i></a>
-            <a class="button raised blue mini-fab"><i class="material-icons">keyboard_arrow_up</i></a>
+
+            <div class="panel">
+                <a class="button raised blue">some text</a>
+                <a class="button raised blue round">some text</a>
+                <a class="button blue fab"><i class="material-icons">add</i></a>
+                <a class="button blue mini-fab"><i class="material-icons">keyboard_arrow_up</i></a>
+            </div>
+
+            <div class="panel">
+                <a disabled class="button raised blue">some text</a>
+                <a disabled class="button raised blue round">some text</a>
+                <a disabled class="button blue fab"><i class="material-icons">add</i></a>
+                <a disabled class="button blue mini-fab"><i class="material-icons">keyboard_arrow_up</i></a>
+            </div>
         </div>
     </div>
 
     <div class="row">
-        <div class="container fluid">
-            <div class="responsive round shadow-3 margin-bottom margin-top">
+        <div class="col md-6 lg-3">
+            <div class="card shadow-3">
+                <div class="media">
+                    <img src="images/landscape-18.jpg" class="fluid">
+                    <div class="title">Lorem ipsum</div>
+                </div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi qui obcaecati quis illo voluptatem nostrum,
+                        fugiat, cumque similique, aut tempore, iste provident ex quisquam excepturi magnam consectetur ullam.
+                        Eius, quidem.</p>
+                </div>
+                <div class="actions">
+                    <div class="button text-blue">Lorem ipsum</div>
+                </div>
+                <div class="menu">
+                    <div class="button button-icon"><i class="material-icons text-light-gray">share</i></div>
+                </div>
+            </div>
+        </div>
+        <div class="col md-6 lg-3">
+            <div class="card shadow-3">
+                <div class="media hoverable">
+                    <img src="images/arlberg-pass-833326_960_720.jpg" alt="" class="fluid">
+                    <div class="title">Lorem ipsum dolor sit amet, consectetur.</div>
+                </div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At accusantium inventore molestiae ducimus
+                        quod, optio rem eius aliquid autem ratione id ex, nostrum, odit ipsum a quae consequatur voluptas!
+                        Aliquid!
+                    </p>
+                </div>
+                <div class="actions">
+                    <div class="button text-blue">Lorem ipsum</div>
+                </div>
+                <div class="menu">
+                    <div class="button button-icon"><i class="material-icons text-light-gray">share</i></div>
+                </div>
+            </div>
+        </div>
+        <div class="col md-6 lg-3">
+            <div class="card shadow-3">
+                <div class="media hoverable">
+                    <img src="images/mountain-landscape-640617_960_720.jpg" alt="" class="fluid">
+                    <div class="title">Lorem ipsum dolor sit amet</div>
+                </div>
+                <div class="text">
+                    <p>Quae repudiandae, veniam nesciunt nam ex cumque culpa ea consequatur! Harum facere consequuntur id, magni
+                        cumque ipsum reiciendis in accusantium illum debitis voluptate delectus distinctio. Asperiores qui,
+                        ea odit ullam.</p>
+                </div>
+                <div class="actions text-blue">
+                    <div class="button text-blue">Lorem ipsum</div>
+                </div>
+                <div class="menu">
+                    <div class="button button-icon"><i class="material-icons text-light-gray">share</i></div>
+                </div>
+            </div>
+        </div>
+        <div class="col md-6 lg-3">
+            <div class="card shadow-3">
+                <div class="media">
+                    <img src="images/ws_Caribbean_Landscape_1920x1080.jpg" alt="" class="fluid">
+                    <div class="title">Lorem ipsum dolor.</div>
+                </div>
+                <div class="text">
+                    <p>Debitis eveniet ipsa dolorem doloremque eaque repudiandae, dignissimos. Iste eligendi iusto aliquid officiis,
+                        quidem, similique ab quis. Reiciendis sint voluptates maiores eveniet facere nobis, provident voluptatibus
+                        et a accusamus accusantium!</p>
+                </div>
+                <div class="actions">
+                    <div class="button text-blue">Lorem ipsum</div>
+                </div>
+                <div class="menu">
+                    <div class="button button-icon"><i class="material-icons text-light-gray">share</i></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container fluid" style="max-width: 900px;">
+            <div class="responsive round shadow-3">
                 <table class="table bordered hoverable">
-                    <tr class="teal">
+                    <tr class="blue">
                         <th>Lorem</th>
                         <th>Ipsum</th>
                         <th>Dolor</th>
@@ -137,7 +231,7 @@
     </div>
 
     <div class="row">
-        <div class="container fluid">
+        <div class="container fluid" style="max-width: 900px">
             <p>
                 <span class="tooltip-container" style="font-size: 16px;">Hover over me<span class="tooltip">additional info</span></span>
                 lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure provident illum distinctio quaerat fugiat, laudantium sapiente
@@ -147,7 +241,7 @@
     </div>
 
     <div class="row">
-        <div class="container fluid">
+        <div class="container fluid" style="max-width: 900px">
             <p>
                 <span class="tooltip-container" style="font-size: 16px;">Hover over me<span class="tooltip">additional info</span></span>
                 lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure provident illum distinctio quaerat fugiat, laudantium sapiente
@@ -157,7 +251,7 @@
     </div>
 
     <div class="row">
-        <div class="container fluid">
+        <div class="container fluid" style="max-width: 900px">
             <p>
                 <span class="tooltip-container" style="font-size: 16px;">Hover over me<span class="tooltip">additional info</span></span>
                 lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure provident illum distinctio quaerat fugiat, laudantium sapiente
@@ -207,7 +301,7 @@
         </div>
     </div>
 
-    <div class="row margin">
+    <div class="row margin-bottom">
         <div class="container">
             <label class="button raised opens-overlay" for="no-script-dialog-check">open scirptless dialog</label>
         </div>
@@ -227,7 +321,7 @@
     </div>
 
     <div class="row">
-        <div class="container" style="max-width: 900px; width: 100%;">
+        <div class="container fluid" style="max-width: 900px;">
             <label class="accordion button raised" for="accordion-toggle-1">accordion 1</label>
             <input type="radio" class="accordion-toggle" id="accordion-toggle-1" name="accordions" checked>
             <div class="accordion-content">
@@ -273,7 +367,7 @@
     </div>
 
     <div class="row">
-        <div class="panel" style="width: 100%; max-width: 900px;">
+        <div class="container fluid" style="max-width: 900px;">
             <div class="tab-group">
                 <label for="tab-1-toggle" class="tab">Lorem</label>
                 <label for="tab-2-toggle" class="tab">Deleniti</label>
@@ -314,7 +408,7 @@
     </div>
 
     <div class="row">
-        <div class="panel" style="width: 100%; max-width: 900px;">
+        <div class="container" style="width: 100%; max-width: 900px;">
             <div class="tab-group">
                 <label for="tab-4-toggle" class="tab">Lorem</label>
                 <label for="tab-5-toggle" class="tab">Deleniti</label>
@@ -355,7 +449,7 @@
     </div>
 
 
-    <div class="row dark-gray">
+    <div class="row">
         <div class="container margin-bottom" style="width: 100%; max-width: 900px">
             <form>
                 <div class="material-input-container text-blue">
@@ -373,7 +467,7 @@
 
             <label class="material-checkbox" for="checkbox-1">
                 <input type="checkbox" id="checkbox-1">
-                <span class="check text-dark-gray"></span>
+                <span class="check text-light-gray"></span>
                 <span class="text">Checkbox</span>
             </label>
 
@@ -409,6 +503,67 @@
 
             <div class="material-range-container">
                 <input class="material-range" type="range" min="0" max="100" step="1" value="20">
+                <div class="material-range-background">
+                    <div class="material-range-progressbar"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container margin-bottom" style="width: 100%; max-width: 900px">
+            <form>
+                <div class="material-input-container text-blue">
+                    <input class="material-input" type="text" name="username" placeholder="Username" disabled>
+                    <span class="material-bar"></span>
+                </div>
+
+                <div class="material-input-container text-blue">
+                    <textarea class="material-input auto-resize" placeholder="Type in here" disabled></textarea>
+                    <span class="material-bar"></span>
+                </div>
+            </form>
+
+            <br>
+
+            <label class="material-checkbox" for="checkbox-11" disabled>
+                <input type="checkbox" id="checkbox-11" disabled>
+                <span class="check text-light-gray"></span>
+                <span class="text">Checkbox</span>
+            </label>
+
+            <br>
+
+            <label class="material-radio" for="radio-22" disabled>
+                <input type="radio" id="radio-22" name="radios" disabled>
+                <span class="check"></span>
+                <span class="text">Radio</span>
+            </label>
+
+            <label class="material-radio" for="radio-11" disabled>
+                <input type="radio" id="radio-11" name="radios" disabled>
+                <span class="check"></span>
+                <span class="text">Radio</span>
+            </label>
+
+            <label class="material-radio" for="radio-33" disabled>
+                <input type="radio" id="radio-33" name="radios" disabled>
+                <span class="check"></span>
+                <span class="text">Radio</span>
+            </label>
+
+            <br>
+
+            <label class="material-switch" for="switch-11" disabled>
+                <input type="checkbox" id="switch-11" disabled>
+                <span class="check"></span>
+                <span class="text">Switch</span>
+            </label>
+
+            <br>
+
+            <div class="material-range-container" disabled>
+                <input class="material-range" type="range" min="0" max="100" step="1" value="20" disabled>
                 <div class="material-range-background">
                     <div class="material-range-progressbar"></div>
                 </div>
