--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/overlays.css">
-    <link rel="stylesheet" href="css/nav-and-dropdowns.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/dropdowns.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/shadows.css">
     <link rel="stylesheet" href="css/utilities.css">
@@ -307,12 +308,12 @@
                 </ul>
             </div>
 
-            <div class="dropdown-hover">
-                <button class="button">Lorem ipsum dolor sit amet, consectetur</button>
-                <ul class="dropdown-content right top shadow-3">
-                    <li class="dropdown-item">Lorem ipsum dolor sit amet.</li>
-                    <li class="dropdown-item">Neque, illum, amet. Mollitia, explicabo.</li>
-                    <li class="dropdown-item">Ipsam doloribus aliquam, nam optio.</li>
+            <div class="dropdown">
+                <button class="button dropdown-button">Lorem ipsum dolor sit amet</button>
+                <ul class="dropdown-content top right shadow-3">
+                    <li class="dropdown-item">Lorem ipsum dolor sit amet</li>
+                    <li class="dropdown-item">Neque, illum</li>
+                    <li class="dropdown-item">Ipsam doloribus</li>
                 </ul>
             </div>
         </div>
@@ -608,6 +609,19 @@
         </div>
     </div>
 
+    <div class="row" style="margin-bottom: 400px">
+        <div class="container hero">
+            <div class="dropdown">
+                <button class="button dropdown-button">menu</button>
+                <div class="dropdown-content shadow-3">
+                    <li class="dropdown-item">Lorem.</li>
+                    <li class="dropdown-item">Assumenda!</li>
+                    <li class="dropdown-item">Molestias!</li>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="hero">
             <div class="footer-left">
@@ -642,6 +656,13 @@
                     <li>Ab.</li>
                     <li>Sed?</li>
                 </ul>
+                <ul class="list">
+                    <li class="title">Lorem.</li>
+                    <li>Doloremque!</li>
+                    <li>Quae.</li>
+                    <li>Delectus.</li>
+                    <li>Sed?</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -650,6 +671,7 @@
     <script src="js/overlays.js"></script>
     <script src="js/tabs.js"></script>
     <script src="js/transitions.js"></script>
+    <script src="js/dropdowns.js"></script>
     <script src="js/ripples.js"></script>
     <!-- <script src="js/check-in-view.js"></script> -->
     <!-- <script src="js/benchmark.js"></script> -->
