* added a better tooltip
* visual tweaks for nav and inputs

* updated sandbox

--- a/index.html
+++ b/index.html
@@ -261,32 +261,12 @@
     </div>
 
     <div class="row">
-        <div class="container hero">
+        <div class="container hero margin-top margin-bottom">
             <p>
-                <div class="tooltip">
+                <div class="tooltip top">
                     <span class="tooltip__label">Hover over me</span>
-                    <span class="tooltip__info left">lorem info</span>
+                    <span class="tooltip__info">lorem info lorem info lorem info</span>
                 </div>
-                lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure provident illum distinctio quaerat fugiat, laudantium sapiente
-                consectetur laboriosam doloremque harum iusto recusandae veniam eaque eos maxime architecto rem in necessitatibus.
-            </p>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="container hero">
-            <p>
-                <span class="tooltip-container" style="font-size: 16px;">Hover over me<span class="tooltip">additional info</span></span>
-                lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure provident illum distinctio quaerat fugiat, laudantium sapiente
-                consectetur laboriosam doloremque harum iusto recusandae veniam eaque eos maxime architecto rem in necessitatibus.
-            </p>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="container hero fluid">
-            <p>
-                <span class="tooltip-container" style="font-size: 16px;">Hover over me<span class="tooltip">additional info</span></span>
                 lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure provident illum distinctio quaerat fugiat, laudantium sapiente
                 consectetur laboriosam doloremque harum iusto recusandae veniam eaque eos maxime architecto rem in necessitatibus.
             </p>
